Fix NOTREACHED() in abortIfUpdating() when aborting 0-byte appendBuffer

BUG=643788
TEST=upstream w3c web-platform-tests/media-source/mediasource-removesourcebuffer.html

Review-Url: https://codereview.chromium.org/2305023002
Cr-Commit-Position: refs/heads/master@{#416357}

Former-commit-id: 016559ca79587b9ec5b4e8fda0117b12cb42f738